--- a/muracle_prefabuleux/pom.xml
+++ b/muracle_prefabuleux/pom.xml
@@ -31,6 +31,16 @@
       <artifactId>truth</artifactId>
       <version>1.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.formdev</groupId>
+      <artifactId>flatlaf</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.formdev</groupId>
+      <artifactId>flatlaf-intellij-themes</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 
   <build>
