--- a/muracle_prefabuleux/pom.xml
+++ b/muracle_prefabuleux/pom.xml
@@ -41,6 +41,12 @@
       <artifactId>flatlaf-intellij-themes</artifactId>
       <version>2.6</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
