--- a/muracle_prefabuleux/pom.xml
+++ b/muracle_prefabuleux/pom.xml
@@ -47,6 +47,12 @@
           <version>23.0.0</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
